--- a/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/packages.config
+++ b/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/packages.config
@@ -1,51 +1,76 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Azure.Core" version="1.21.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
+  <package id="Azure.Core" version="1.41.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="6.0.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net472" />
-  <package id="Microsoft.Graph" version="4.14.0" targetFramework="net472" />
-  <package id="Microsoft.Graph.Communications.Client" version="1.2.0.4161" targetFramework="net472" />
-  <package id="Microsoft.Graph.Communications.Common" version="1.2.0.4161" targetFramework="net472" />
-  <package id="Microsoft.Graph.Communications.Core" version="1.2.0.4161" targetFramework="net472" />
-  <package id="Microsoft.Graph.Core" version="2.0.7" targetFramework="net472" />
-  <package id="Microsoft.Identity.Client" version="4.39.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.15.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="6.15.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols" version="6.15.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.15.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="6.15.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Skype.Bots.Media" version="1.20.0.348-alpha" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Microsoft.Graph" version="5.56.0" targetFramework="net472" />
+  <package id="Microsoft.Graph.Communications.Client" version="1.2.0.10563" targetFramework="net472" />
+  <package id="Microsoft.Graph.Communications.Common" version="1.2.0.10563" targetFramework="net472" />
+  <package id="Microsoft.Graph.Communications.Core" version="1.2.0.10563" targetFramework="net472" />
+  <package id="Microsoft.Graph.Core" version="3.1.14" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.49.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Kiota.Abstractions" version="1.9.11" targetFramework="net472" />
+  <package id="Microsoft.Kiota.Authentication.Azure" version="1.9.11" targetFramework="net472" />
+  <package id="Microsoft.Kiota.Http.HttpClientLibrary" version="1.9.11" targetFramework="net472" />
+  <package id="Microsoft.Kiota.Serialization.Form" version="1.9.11" targetFramework="net472" />
+  <package id="Microsoft.Kiota.Serialization.Json" version="1.9.11" targetFramework="net472" />
+  <package id="Microsoft.Kiota.Serialization.Multipart" version="1.9.11" targetFramework="net472" />
+  <package id="Microsoft.Kiota.Serialization.Text" version="1.9.11" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Hosting" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Skype.Bots.Media" version="1.27.0.2-alpha" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="Std.UriTemplate" version="1.0.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.ClientModel" version="1.0.0" targetFramework="net472" />
   <package id="System.Collections" version="4.0.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.1" targetFramework="net472" />
   <package id="System.Diagnostics.Tracing" version="4.0.0" targetFramework="net472" />
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="6.15.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="8.0.1" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq" version="4.0.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Memory.Data" version="1.0.2" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Net.Http.WinHttpHandler" version="6.0.0" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net472" />
-  <package id="System.Runtime" version="4.0.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
-  <package id="System.Text.Json" version="6.0.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="8.0.4" targetFramework="net472" />
   <package id="System.Threading" version="4.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.0.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Dataflow" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="Unity" version="5.11.10" targetFramework="net472" />
 </packages>
